--- a/Lab6/appsettings.Development.json
+++ b/Lab6/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:lami-server.database.windows.net,1433;Initial Catalog=lamilab6;Persist Security Info=False;User ID=admin-lami;Password=Kabuasa071997;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
